@@ -39,17 +39,23 @@
     text-decoration: line-through;
 }
 
+.pri-1, .pri-2, .pri-3, .pri-4, .pri-5 {
+    background-color: #fff;
+    padding: 2px 5px;
+    border: 1px solid #000;
+    font-weight: bold;
+}
 .pri-1 {
     color: #f00;
 }
 .pri-2 {
-    color: #f30;
+    color: #f50;
 }
 .pri-3 {
     color: #000;
 }
 .pri-4 {
-    color: #03f;
+    color: #05f;
 }
 .pri-5 {
     color: #00f;
